ingress/ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata: 
  name: nginx-ingress 
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: / 
spec: 
  ingressClassName: nginx 
  rules: 
  - host: a5c4c84fdbcb24085b4853339f56f0cd-04080025c7aee4df.elb.us-west-2.amazonaws.com
    http: 
      paths: 
      - path: / 
        pathType: Prefix 
        backend: 
          service: 
            name: home-svc
            port: 
              number: 80 
      - path: /mobile 
        pathType: Prefix 
        backend: 
          service: 
            name: mobile-svc 
            port: 
              number: 80 
      - path: /laptop 
        pathType: Prefix 
        backend:  
          service:  
            name: laptop-svc
            port:  
              number: 8080
